@@ -1,3 +1,9 @@
+2010-07-18  Philippe Brochard  <pbrochard@common-lisp.net>
+
+	* src/clfswm-util.lisp (delete-focus-window)
+	(destroy-focus-window): Remove child in parent frame before
+	stopping it.
+
 2010-07-16  Philippe Brochard  <pbrochard@common-lisp.net>
 
 	* src/clfswm-util.lisp (identify-key): Add a timeout in
